--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,47 +1,29 @@
 .sidebar {
-  background: #101010;
+  background: url(../../assets//statisticsPage-background-d.webp);
   height: 100vh;
-  width: 100%;
+  width: 40%;
 }
 
-.sidebarBrandBox {
-  background: #161d2a;
-  height: 80px;
+.link {
+  display: inline-block;
+  text-decoration: none;
+  padding: 12px;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 18px;
+  color: #fbfbfb;
+
+  .link.active {
+    color: #ffffff99;
+    font-weight: 700;
+  }
 }
 
-.sidebarUl {
+.iconMargin {
+  margin-right: 15px;
+}
+
+.columLinks {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  list-style-type: none;
-}
-
-.sidebarLi {
-  color: #ff6b0a;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 1.25px;
-  font-weight: 700;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-
-.navLink {
-  color: #0e0e0e;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 1.25px;
-  font-weight: 700;
-  text-transform: uppercase;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.navLink a:hover,
-.navLink a:focus {
-  text-decoration: underline;
-}
-
-.navLinkActive {
-  color: #ff6b0a !important;
 }
