--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center; /* Pentru a alinia vertical butonul de exit */
   gap: 30px;
-  min-width: 440px;
+  min-width: 320px;
   background-color: #fff;
   width: 100%;
   margin: 0px;
@@ -74,5 +74,88 @@
 
   .userNameHeader:active {
     transform: translateY(2px);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+}
+
+@media only screen and (min-width: 1280px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Pentru a alinia vertical butonul de exit */
+    gap: 30px;
+    min-width: 440px;
+    background-color: #fff;
+    width: 100%;
+    margin: 0px;
+    padding: 1em;
+    box-shadow: 0 4px 40px 0 rgba(0, 0, 0, 0.25),
+      inset 0 -3px 2px 0 rgba(0, 0, 0, 0.1);
+    background: linear-gradient(276deg, #2e1746 3.19%, #2e225f 100%);
+  }
+
+  .boxModelLogo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-self: center;
+    width: 115px;
+    height: 48px;
+  }
+
+  .baseTypography {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 17px;
+    color: #fff;
+    text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  }
+
+  .box {
+    width: 161px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+    max-width: 400px;
+  }
+
+  .list {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .exitBtn {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: transparent;
+    font-family: Poppins Regular, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  .userNameHeader {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: transparent;
+    font-family: Poppins Regular, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.6);
+
+    .userNameHeader:hover {
+      text-decoration: none;
+    }
+
+    .userNameHeader:active {
+      transform: translateY(2px);
+    }
   }
 }
