--- a/src/pages/DashboardPage/Dashboard.module.css
+++ b/src/pages/DashboardPage/Dashboard.module.css
@@ -1,5 +1,19 @@
 .list {
   list-style-type: none;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+}
+
+@media only screen and (min-width: 768px) {
+  .list {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .list {
+    display: flex;
+    flex-direction: column;
+  }
 }
