--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,14 +1,13 @@
 /* mobile responsive */
 .responsiveBox {
   background: url(../../assets//statisticsPage-background-d.webp);
-  height: 38vh;
   width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 .link {
-  display: inline-block;
+  display: flex;
   text-decoration: none;
   padding: 12px;
   font-family: Poppins Regular, sans-serif;
@@ -20,6 +19,10 @@
     color: #ffffff99;
     font-weight: 700;
   }
+}
+
+.nameHidden {
+  display: none;
 }
 
 .linkCurrency {
@@ -43,11 +46,9 @@
 
 .linksBox {
   display: flex;
-  flex-direction: column;
-}
-
-.currencyBox {
-  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 /* laptop responsive */
@@ -56,10 +57,38 @@
     flex-direction: row;
     display: flex;
     width: 100%;
+    height: 30vh;
+    padding: 20px;
+  }
+
+  .linksBox {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    margin-bottom: 40px;
+  }
+
+  .nameHidden {
+    display: inline;
   }
 
   .currencyBox {
     display: none;
+  }
+
+  .link {
+    display: flex;
+    text-decoration: none;
+    font-family: Poppins Regular, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #fbfbfb;
+
+    .link.active {
+      color: #ffffff99;
+      font-weight: 700;
+    }
   }
 
   .linkCurrency {
@@ -73,6 +102,7 @@
   .LinksBox {
     display: flex;
     flex-direction: column;
+    padding: 0px;
   }
 
   .currencyBox {
