--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,2 @@
-@import-normalize; /* bring in normalize.css styles */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-:root {
-  --white: #fbfbfb;
-  --icon-violet: #734aef;
-
-  --button-gradient: linear-gradient(
-    167deg,
-    #ffc727 0%,
-    #9e40ba 61.46%,
-    #7000ff 90.54%
-  );
-
-  --transparency-10: rgba(255, 255, 255, 0.1);
-  --transparency-20: rgba(255, 255, 255, 0.2);
-  --transparency-40: rgba(255, 255, 255, 0.4);
-  --transparency-60: rgba(255, 255, 255, 0.6);
-
-  --yellow: #ffb627;
-  --dashboard-text: #ff868d;
-  --button-text-color: #623f8b;
-}
+@import url('./styles/globalVars.css');
+@import url('./styles/fonts.css');
