logo and background
  background: #101010;   /* ciprian */
index.css

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -14,6 +14,12 @@
   background: linear-gradient(276deg, #2e1746 3.19%, #2e225f 100%);
 }
 
+.test {
+  background-image: url(../../assets/logo.svg);
+  /* background-size: contain;  */
+  /* background-repeat: no-repeat;  */
+}
+
 .boxModelLogo {
   display: flex;
   flex-direction: column;
