--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,4 +1,5 @@
 /* Navigation.module.css */
+
 .responsiveBox {
   background: url(../../assets//statisticsPage-background-d.webp);
   width: 100%;
@@ -38,7 +39,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start; /* Modificați această linie */
 }
 
 @media only screen and (min-width: 768px) {
@@ -52,7 +53,7 @@
   .linksBox {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     margin-bottom: 40px;
   }
