--- a/src/components/RegisterForm/ProgressBar.module.css
+++ b/src/components/RegisterForm/ProgressBar.module.css
@@ -1,12 +1,11 @@
-/* .ProgressBarWrapper {
+.ProgressBarWrapper {
   width: 100%;
   height: 4px;
   background-color: lightgray;
   margin-top: 6px;
   border-radius: 20px;
-} */
-
-.ProgressBar {
+}
+*/ .ProgressBar {
   height: 100%;
   border-radius: 50px;
   background-color: #007bff;
