--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -1,1 +1,93 @@
-
+.Logo {
+  display: flex;
+  width: 128px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 19.68px;
+}
+.LogoText {
+  color: var(--white);
+  font-family: 'Poppins';
+  font-size: 19.111px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0;
+}
+.Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  height: 100vh;
+  width: 100vw;
+  color: var(--white-60);
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+}
+.Input {
+  background: transparent;
+  color: var(--white-60);
+  font-family: 'Poppins';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border-bottom: 1px solid var(--white-40);
+  padding-left: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  margin-bottom: 20px;
+  position: relative;
+}
+.InputField {
+  color: var(--white-60);
+  font-family: 'Poppins';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  background: transparent;
+  border: none;
+}
+.InputField::placeholder {
+  color: var(--white-60);
+}
+.Input:hover {
+  border-bottom: 1px solid var(--yellow);
+}
+.InputField:focus {
+  outline: none;
+}
+.error {
+  color: red;
+  font-size: 12px;
+  margin-left: 5px;
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+}
+.InputWrapper {
+  position: relative;
+}
+.ProgressBarWrapper {
+  height: 4px;
+  border-radius: 20px;
+  position: relative;
+  left: 0;
+  bottom: 0;
+}
+.ProgressBar {
+  width: 100%;
+  height: 4px;
+  border-radius: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
