--- a/src/components/Dashboard/SideBar/Balance/Balance.module.css
+++ b/src/components/Dashboard/SideBar/Balance/Balance.module.css
@@ -15,8 +15,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 5px;
-  width: 100%;
+  width: 88%;
   height: 80px;
   box-shadow: 1px 9px 15px 0 rgba(0, 0, 0, 0.2);
   background: rgba(82, 59, 126, 0.6);
@@ -28,4 +27,16 @@
   font-size: 30px;
   color: #fbfbfb;
   font-weight: 700;
+}
+
+@media only screen and (min-width: 768px) {
+  .styleBalance {
+    width: 336px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .styleBalance {
+    width: 480px;
+  }
 }
