--- a/src/components/StatisticsDashboard/StatisticsDashboard.module.css
+++ b/src/components/StatisticsDashboard/StatisticsDashboard.module.css
@@ -9,11 +9,13 @@
   .dashboard {
     gap: 16px;
     flex-direction: row;
+    width: 336px;
   }
 }
 
 @media only screen and (min-width: 1280px) {
   .dashboard {
     gap: 32px;
+    width: 395px;
   }
 }
