--- a/src/components/StatisticsTable/StatisticsTable.module.css
+++ b/src/components/StatisticsTable/StatisticsTable.module.css
@@ -37,21 +37,6 @@
   background: #942cc5;
 }
 
-@media only screen and (min-width: 768px) {
-  .listContainer {
-    overflow-y: auto;
-    height: 100%;
-    max-height: calc(100vh - 534px);
-  }
-}
-
-@media only screen and (min-width: 1280px) {
-  .listContainer {
-    height: 100%;
-    max-height: calc(100vh - 396px);
-  }
-}
-
 .list {
   padding: 0;
   margin: 0;
@@ -95,7 +80,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 18px 3px;
+  padding: 20px 27px;
   color: #fff;
   font-size: 14px;
   font-family: 'Poppins-SemiBold', sans-serif;
@@ -108,7 +93,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 18px 45px;
+  padding: 0 27px;
+  padding-bottom: 15px;
   color: var(--white);
   font-size: 14px;
   font-family: 'Poppins-SemiBold', sans-serif;
@@ -117,6 +103,25 @@
   color: #ffb627;
 }
 
+@media only screen and (min-width: 768px) {
+  .listContainer {
+    max-height: auto;
+    overflow-y: hidden;
+  }
+  .tableContainer {
+    width: 336px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .listContainer {
+    height: 100%;
+    max-height: calc(100vh - 396px);
+  }
+  .tableContainer {
+    width: 395px;
+  }
+}
 @media only screen and (min-width: 768px) and (max-width: 1279px) {
   .income {
     padding-bottom: 13px;
