--- a/src/components/StatisticsTable/StatisticsTable.module.css
+++ b/src/components/StatisticsTable/StatisticsTable.module.css
@@ -1,3 +1,20 @@
+*,
+table,
+tbody,
+tr,
+th,
+td {
+  box-sizing: border-box;
+  padding: 0;
+}
+.tableContainer {
+  width: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 20px;
+  margin: 0 20px;
+}
 .category {
   display: flex;
   justify-content: space-between;
@@ -110,6 +127,7 @@
   }
   .tableContainer {
     width: 336px;
+    padding: 0;
   }
 }
 
