--- a/src/pages/StatisticsPage/Statistics.module.css
+++ b/src/pages/StatisticsPage/Statistics.module.css
@@ -28,18 +28,30 @@ h2 {
   display: flex;
   flex-direction: column;
   width: 80%;
+  align-items: center;
+  width: 320px;
+  padding: 0 20px;
 }
 @media only screen and (min-width: 768px) {
+  .container {
+    padding: 0;
+  }
   .content {
     flex-direction: row;
     width: 100%;
-    padding: 20px;
+    padding: 0 32px;
     align-items: flex-start;
   }
   h2 {
+    margin-left: 32px;
     padding: 0;
-    margin-bottom: 0;
+    margin-bottom: 20px;
   }
+  .table {
+    width: 336px;
+    padding: 0;
+  }
+  
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1278px) {
