--- a/src/components/Dashboard/SideBar/Balance/Balance.module.css
+++ b/src/components/Dashboard/SideBar/Balance/Balance.module.css
@@ -19,6 +19,7 @@
   height: 80px;
   box-shadow: 1px 9px 15px 0 rgba(0, 0, 0, 0.2);
   background: rgba(82, 59, 126, 0.6);
+  margin-top: 12px;
 }
 
 .numberBalance {
@@ -32,6 +33,7 @@
 @media only screen and (min-width: 768px) {
   .styleBalance {
     width: 336px;
+    margin-top: 28px;
   }
 }
 
