--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,19 +1,24 @@
-.Logo {
+.FormWrapper {
+  background-image: url('../../assets/images/login-bg/mobile-bg.png'),
+    linear-gradient(var(--transp-10), var(--transp-10));
+  box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(50px);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: fit-content;
   display: flex;
-  width: 128px;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 31.68px;
+  height: 100vh;
+  width: 100vw;
 }
-.LogoText {
-  color: var(--white);
-  font-family: 'Poppins';
-  font-size: 19.111px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin: 0;
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .FormWrapper {
+    background-image: url('../../assets/images/login-bg/mobile-bg-2x.png');
+  }
 }
 .Form {
   display: flex;
@@ -26,6 +31,28 @@
   font-size: 18px;
   font-weight: 400;
   line-height: normal;
+  padding: 97px, 20px;
+}
+.Logo {
+  display: flex;
+  width: 128px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 31.68px;
+}
+.LogoIcon {
+  width: 25.461px;
+  height: 25.461px;
+}
+.LogoText {
+  color: var(--white);
+  font-family: 'Poppins';
+  font-size: 19.111px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0;
 }
 .Input {
   background: transparent;
@@ -36,7 +63,8 @@
   font-weight: 400;
   line-height: normal;
   border-bottom: 1px solid var(--white-40);
-  padding-left: 12px;
+  padding-left: 11px;
+  padding-bottom: 8px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -73,77 +101,51 @@
 }
 @media screen and (min-width: 768px) {
   .FormWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-image: url('../../assets/images/login-bg/tablet-bg.png');
+  }
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .FormWrapper {
+      background-image: url('../../assets/images/login-bg/tablet-bg-2x.png');
+    }
   }
   .Form {
     width: 533px;
     height: 570px;
     border-radius: 8px;
+    background: var(--transp-10);
     box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(50px);
+    padding: 80px, 62px;
+  }
+  .LogoIcon {
+    width: 36px;
+    height: 36px;
   }
   .LogoText {
     font-size: 26.963px;
   }
   .Input {
-    font-size: 16px;
+    width: calc(100% - 124px);
   }
-  .InputField {
-    font-size: 16px;
-  }
-  .LogoText {
-    font-size: 16px;
+  .Input.LastChild {
+    margin-bottom: 32px;
   }
 }
-.FormWrapper {
-  background-image: url('../../assets/images/login-bg/mobile-bg.png'),
-    linear-gradient(var(--transp-10), var(--transp-10));
-  box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(50px);
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
-}
-@media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .FormWrapper {
-    background-image: url('../../assets/images/login-bg/mobile-bg-2x.png');
-  }
-}
-@media screen and (min-width: 768px) {
-  .FormWrapper {
-    background-image: url('../../assets/images/login-bg/tablet-bg.png');
-  }
-}
-@media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .FormWrapper {
-    background-image: url('../../assets/images/login-bg/tablet-bg-2x.png');
-  }
-}
+
 @media screen and (min-width: 1024px) {
   .FormWrapper {
     background-image: url('../../assets/images/login-bg/desktop-bg.png'),
       linear-gradient(var(--transp-10), var(--transp-10));
   }
-}
-@media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .FormWrapper {
-    background-image: url('../../assets/images/login-bg/desktop-bg-2x.png');
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .FormWrapper {
+      background-image: url('../../assets/images/login-bg/desktop-bg-2x.png');
+    }
   }
 }
