--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -1,10 +1,49 @@
+.FormWrapper {
+  background-image: url('../../assets/images/login-bg/mobile-bg.png'),
+    linear-gradient(var(--transp-10), var(--transp-10));
+  box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(50px);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .FormWrapper {
+    background-image: url('../../assets/images/login-bg/mobile-bg-2x.png');
+  }
+}
+.Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  color: var(--white-60);
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+  padding: 97px, 20px;
+}
 .Logo {
   display: flex;
   width: 128px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 19.68px;
+  margin-bottom: 20px;
+}
+.LogoIcon {
+  width: 25.461px;
+  height: 25.461px;
 }
 .LogoText {
   color: var(--white);
@@ -15,20 +54,6 @@
   line-height: normal;
   margin: 0;
 }
-.Form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  height: 100vh;
-  width: 100vw;
-  color: var(--white-60);
-  font-family: 'Poppins', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: normal;
-}
 .Input {
   background: transparent;
   color: var(--white-60);
@@ -38,7 +63,8 @@
   font-weight: 400;
   line-height: normal;
   border-bottom: 1px solid var(--white-40);
-  padding-left: 12px;
+  padding-left: 11px;
+  padding-bottom: 8px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -73,21 +99,54 @@
   bottom: -20px;
   left: 0;
 }
-.InputWrapper {
-  position: relative;
+@media screen and (min-width: 768px) {
+  .FormWrapper {
+    background-image: url('../../assets/images/register-bg/tablet-bg.png');
+  }
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .FormWrapper {
+      background-image: url('../../assets/images/register-bg/tablet-bg-2x.png');
+    }
+  }
+  .Form {
+    width: 533px;
+    height: 624px;
+    border-radius: 8px;
+    background: var(--transp-10);
+    box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(50px);
+    padding: 80px, 62px;
+  }
+  .LogoIcon {
+    width: 36px;
+    height: 36px;
+  }
+  .LogoText {
+    font-size: 26.963px;
+  }
+  .Input {
+    width: calc(100% - 124px);
+  }
+  .InputWrapper,
+  .Input.LastChild {
+    width: 409px;
+  }
 }
-.ProgressBarWrapper {
-  height: 4px;
-  border-radius: 20px;
-  position: relative;
-  left: 0;
-  bottom: 0;
-}
-.ProgressBar {
-  width: 100%;
-  height: 4px;
-  border-radius: 5px;
-  position: absolute;
-  top: 0;
-  left: 0;
+
+@media screen and (min-width: 1024px) {
+  .FormWrapper {
+    background-image: url('../../assets/images/register-bg/desktop-bg.png'),
+      linear-gradient(var(--transp-10), var(--transp-10));
+  }
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .FormWrapper {
+      background-image: url('../../assets/images/register-bg/desktop-bg-2x.png');
+    }
+  }
 }
