--- a/src/components/Dashboard/SideBar/Balance/Balance.module.css
+++ b/src/components/Dashboard/SideBar/Balance/Balance.module.css
@@ -2,6 +2,7 @@
 .balanceTitle {
   margin-top: 5px;
   margin-left: 10px;
+  margin-bottom: 10px;
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
   font-size: 12px;
@@ -15,7 +16,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 88%;
+  width: 100%;
   height: 80px;
   box-shadow: 1px 9px 15px 0 rgba(0, 0, 0, 0.2);
   background: rgba(82, 59, 126, 0.6);
@@ -33,12 +34,13 @@
 @media only screen and (min-width: 768px) {
   .styleBalance {
     width: 336px;
-    margin-top: 28px;
+    margin-top: 100px;
   }
 }
 
 @media only screen and (min-width: 1280px) {
   .styleBalance {
     width: 480px;
+    margin-top: 0;
   }
 }
