--- a/src/components/Modals/TeamModal/TeamModal.module.css
+++ b/src/components/Modals/TeamModal/TeamModal.module.css
@@ -37,11 +37,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
   padding: 40px 20px;
   box-shadow: 0px 4px 60px 0px rgba(0, 0, 0, 0.25);
   overflow: hidden;
-  height: 100%;
+  width: 85%;
+  height: 90%;
+  align-items: center;
+  justify-content: center;
+  gap: 08px;
 }
 
 .modalLayout::before {
@@ -56,11 +59,24 @@
 @media only screen and (min-width: 768px) {
   .modalLayout {
     position: absolute;
-    width: 590px;
-    height: 589px;
+    width: 60%;
+    height: 70%;
     padding: 40px 73px;
     border-radius: 8px;
-    height: fit-content;
+    height: -moz-fit-content;
+    gap: 10px;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .modalLayout {
+    position: absolute;
+    width: 55%;
+    height: 75%;
+    padding: 40px 73px;
+    border-radius: 8px;
+    height: -moz-fit-content;
+    gap: 12px;
   }
 }
 
